--- a/MyMod/build.gradle
+++ b/MyMod/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'maven-publish'
 
 version = '1.0'
 group = 'com.Samson.attemptone' 
-archivesBaseName = 'modid'
+archivesBaseName = 'attemptone'
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
 
